# chat-assistant

./: .gitignore  README.md  architecture.drawio  local-development.md  localhost-dev.ps1  localhost-dev.sh  podman-dev.sh
backend/: .env-sample  Containerfile  README.md  localhost-dev.ps1  localhost-dev.sh  podman-dev.sh  pyproject.toml  test_stream.py
backend/app/: main.py  requirements.txt
backend/app/routes/: chat.py
backend/app/services/: __init__.py  chat.py  config.py
frontend-react/: Containerfile  README.md  localhost-dev.ps1  localhost-dev.sh  podman-dev.sh
frontend-react/app/: .env-sample  index.html  package-lock.json  package.json  prestart.cjs  vite.config.ts
frontend-react/app/src/: App.tsx  config.ts  main.tsx  theme.ts  vite-env.d.ts
frontend-react/app/src/components/: ChatInput.tsx  ChatView.tsx  MessageBubble.tsx  (+2 more)
frontend-streamlit/: .env-sample  Containerfile  README.md  localhost-dev.ps1  localhost-dev.sh  podman-dev.sh  pyproject.toml
frontend-streamlit/app/: __init__.py  main.py  requirements.txt
frontend-streamlit/app/.streamlit/: config.toml
frontend-streamlit/app/components/: __init__.py  sidebar.py  views.py
frontend-streamlit/app/services/: __init__.py  chat.py  config.py  session.py
frontend-streamlit/app/services/_local_storage/: index.html
helm/: Chart.yaml  README.md  values-backend.yaml  values-react-frontend.yaml  values-streamlit-frontend.yaml  values.yaml
helm/manifests_reference/: argocd_application-dev.yaml
helm/templates/: appenv-secret.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
(+6 files in other folders)
