[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
#reads requirements.txt
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["app/requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
