[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontend-streamlit"
version = "0.1.0"
requires-python = ">=3.14"
#reads requirements.txt
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["app/requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.services" = ["_local_storage/*", "_local_storage/**"]
